# localkube

./: BUILD.bazel  WORKSPACE  bazel-example-bazel
src/: WORKSPACE
src/foo/: BUILD.bazel  main.go
