# TODO kube
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/example/project/foo",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "foo",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "docker",
    binary = ":foo",
)

container_push(
    name = "push",
    image = ":docker",
    format = "Docker",
    registry = "docker.io",
    repository = "hasft/server",
    tag = "{BUILD_USER}",
)
