load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/example/project/foo",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "foo",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

# for linux machine only
go_image(
    name = "image_linux",
    binary = ":foo"
)

# for macos
container_image(
    name = "image_macos",
    base = ":image_linux",
    ports = ["8080"],
    legacy_run_behavior = False,
    docker_run_flags = "--rm -it -p=8080:8080"
)

container_push(
    name = "push",
    image = ":image_linux",
    format = "Docker",
    registry = "docker.io",
    repository = "hasft/example"
)

container_push(
    name = "push_macos",
    image = ":image_macos",
    format = "Docker",
    registry = "docker.io",
    repository = "hasft/example"
)